Canceled default autocomplete feature

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cool Website | Form Validation</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,7 +19,7 @@
             <div class="mother ">
                 <label for="username" class="label">Username</label>
                 <div class="input-icon username">
-                    <input type="text" id="username" name="username" placeholder="florinpop17">
+                    <input type="text" id="username" name="username" placeholder="florinpop17" autocomplete='off'>
                     <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
                     <i class="fa fa-check-circle" aria-hidden="true"></i>
                 </div>
@@ -26,7 +28,7 @@
             <div class="mother">
                 <label for="email">Email</label>
                 <div class="input-icon email">
-                    <input type="email" id="email" name="email" placeholder="a@florin-pop.com">
+                    <input type="email" id="email" name="email" placeholder="a@florin-pop.com" autocomplete='off'>
                     <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
                     <i class="fa fa-check-circle" aria-hidden="true"></i>
                 </div>
